<resources>
    <string name="about_title">&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;&#x0020;&#x0641;&#x0627;&#x0631;&#x0633;&#x06cc;&#x0020;&#x0686;&#x0627;&#x0686;&#x0627;&#x0020;&#x062d;&#x0631;&#x0641;&#x0647;&#x0020;&#x0627;&#x06cc;</string>
    <string name="about_text">&#x0627;&#x0648;&#x0644;&#x06cc;&#x0646;&#x0020;&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;&#x0020;&#x0641;&#x0627;&#x0631;&#x0633;&#x06cc;&#x0020;&#x0628;&#x0631;&#x0627;&#x06cc;&#x0020;&#x06af;&#x0648;&#x0634;&#x06cc;&#x0020;&#x0048;&#x0054;&#x0043;&#x0020;&#x0063;&#x0068;&#x0061;&#x0063;&#x0068;&#x0061;&#x0648;&#x0633;&#x0627;&#x06cc;&#x0631;&#x0020;&#x06af;&#x0648;&#x0634;&#x06cc;&#x0020;&#x0647;&#x0627;&#x06cc;&#x0020;&#x0628;&#x0627;&#x0020;&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;&#x0020;&#x0641;&#x06cc;&#x0632;&#x06cc;&#x06a9;&#x06cc;&#x060c;&#x0020;&#x0628;&#x0627;&#x0020;&#x0642;&#x0627;&#x0628;&#x0644;&#x06cc;&#x062a;&#x0020;&#x062a;&#x0627;&#x06cc;&#x067e;&#x0020;&#x062a;&#x0645;&#x0627;&#x0645;&#x06cc;&#x0020;&#x062d;&#x0631;&#x0648;&#x0641;&#x0020;&#x0641;&#x0627;&#x0631;&#x0633;&#x06cc;&#x0020;&#x062a;&#x0648;&#x0633;&#x0637;&#x0020;&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;&#x0020;&#x0633;&#x062e;&#x062a;&#x0020;&#x0627;&#x0641;&#x0632;&#x0627;&#x0631;&#x06cc;&#x0020;&#x06af;&#x0648;&#x0634;&#x06cc;&#x0020;&#x0648;&#x0020;&#x0627;&#x0645;&#x06a9;&#x0627;&#x0646;&#x0020;&#x062a;&#x063a;&#x06cc;&#x06cc;&#x0631;&#x0020;&#x0645;&#x06a9;&#x0627;&#x0646;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0647;&#x0627;&#x0020;&#x0628;&#x0647;&#x0020;&#x0635;&#x0648;&#x0631;&#x062a;&#x0020;&#x062f;&#x0633;&#x062a;&#x06cc;</string>
	<string name="about_version">Version 1.6</string>
	<string name="about_copyright">CopyRight &#x00A9; 2013-2014 Mehdi Sohrabi</string>
    <string name="choose_keyboard">&#x0627;&#x0646;&#x062a;&#x062e;&#x0627;&#x0628;&#x0020;&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;</string>
    <string name="page2_step1">&#x0031;&#x0029;&#x0020;&#x062f;&#x0631;&#x0020;&#x0647;&#x0631;&#x0020;&#x06a9;&#x0627;&#x062f;&#x0631;&#x06cc;&#x0020;&#x06a9;&#x0647;&#x0020;&#x0645;&#x0627;&#x06cc;&#x0644;&#x0020;&#x0628;&#x0647;&#x0020;&#x062a;&#x0627;&#x06cc;&#x067e;&#x0020;&#x0645;&#x062a;&#x0646;&#x0020;&#x0647;&#x0633;&#x062a;&#x06cc;&#x062f;&#x0020;&#x0028;&#x0628;&#x0631;&#x0627;&#x06cc;&#x0020;&#x0645;&#x062b;&#x0627;&#x0644;&#x0020;&#x06a9;&#x0627;&#x062f;&#x0631;&#x0020;&#x0627;&#x0633;&#x0020;&#x0627;&#x0645;&#x0020;&#x0627;&#x0633;&#x0029;&#x0020;&#x0627;&#x0646;&#x06af;&#x0634;&#x062a;&#x0020;&#x062e;&#x0648;&#x062f;&#x0020;&#x0631;&#x0627;&#x0020;&#x0628;&#x0631;&#x0020;&#x0631;&#x0648;&#x06cc;&#x0020;&#x0635;&#x0641;&#x062d;&#x0647;&#x0020;&#x0646;&#x06af;&#x0647;&#x0020;&#x062f;&#x0627;&#x0631;&#x06cc;&#x062f;&#x0020;&#x0028;&#x0644;&#x0627;&#x0646;&#x06af;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x06a9;&#x0029;&#x0020;&#x062a;&#x0627;&#x0020;&#x06af;&#x0632;&#x06cc;&#x0646;&#x0647;&#x0020;&#x0647;&#x0627;&#x06cc;&#x06cc;&#x0020;&#x0646;&#x0638;&#x06cc;&#x0631;&#x0020;&#x062a;&#x0635;&#x0648;&#x06cc;&#x0631;&#x0020;&#x0632;&#x06cc;&#x0631;&#x0020;&#x0638;&#x0627;&#x0647;&#x0631;&#x0020;&#x0634;&#x0648;&#x062f;</string>
    <string name="page2_step2">&#x0032;&#x0029;&#x0020;&#x06af;&#x0632;&#x06cc;&#x0646;&#x0647;&#x0020;&#x0069;&#x006e;&#x0070;&#x0075;&#x0074;&#x0020;&#x006d;&#x0065;&#x0074;&#x0068;&#x006f;&#x0064;&#x0020;&#x0631;&#x0627;&#x0020;&#x0627;&#x0646;&#x062a;&#x062e;&#x0627;&#x0628;&#x0020;&#x06a9;&#x0646;&#x06cc;&#x062f;</string>
    <string name="page2_step3">&#x0033;&#x0029;&#x0020;&#x062f;&#x0631;&#x0020;&#x06a9;&#x0627;&#x062f;&#x0631;&#x0020;&#x0628;&#x0627;&#x0632;&#x0020;&#x0634;&#x062f;&#x0647;&#x0020;&#x06af;&#x0632;&#x06cc;&#x0646;&#x0647;&#x0020;&#x0063;&#x0068;&#x0061;&#x0063;&#x0068;&#x0061;&#x0020;&#x0070;&#x0065;&#x0072;&#x0073;&#x0069;&#x0061;&#x006e;&#x0020;&#x006b;&#x0065;&#x0079;&#x0062;&#x006f;&#x0061;&#x0072;&#x0064;&#x0020;&#x0070;&#x0072;&#x006f;&#x0020;&#x0631;&#x0627;&#x0020;&#x0627;&#x0646;&#x062a;&#x062e;&#x0627;&#x0628;&#x0020;&#x06a9;&#x0646;&#x06cc;&#x062f;&#x002e;</string>
	<string name="howToUse">&#x0631;&#x0627;&#x0647;&#x0646;&#x0645;&#x0627;&#x06cc;&#x0020;&#x0627;&#x0633;&#x062a;&#x0641;&#x0627;&#x062f;&#x0647;</string>
	<string name="keyMapping">&#x0646;&#x06af;&#x0627;&#x0634;&#x062a;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0647;&#x0627;</string>
	<string name="aboutApp">&#x062f;&#x0631;&#x0628;&#x0627;&#x0631;&#x0647;&#x0020;&#x0627;&#x067e;&#x0644;&#x06cc;&#x06a9;&#x06cc;&#x0634;&#x0646;</string>
	<string name="change_key_dialog_text1">&#x0644;&#x0637;&#x0641;&#x0627;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0020;&#x0645;&#x0648;&#x0631;&#x062f;&#x0646;&#x0638;&#x0631;&#x0020;&#x0628;&#x0631;&#x0627;&#x06cc;&#x0020;&#x062d;&#x0631;&#x0641;</string>
    <string name="change_key_dialog_text2">&#x0631;&#x0627;&#x0020;&#x0641;&#x0634;&#x0627;&#x0631;&#x0020;&#x062f;&#x0647;&#x06cc;&#x062f;</string>
    <string name="change_key_dialog_currKey">&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0020;&#x0641;&#x0639;&#x0644;&#x06cc;</string>
	<string name="keymap_guide_text1">&#x0628;&#x0639;&#x062f;&#x0020;&#x0627;&#x0632;&#x0020;&#x062a;&#x063a;&#x06cc;&#x06cc;&#x0631;&#x0020;&#x0645;&#x06a9;&#x0627;&#x0646;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0647;&#x0627;&#x060c;&#x0020;&#x0628;&#x0631;&#x0627;&#x06cc;&#x0020;&#x0627;&#x0639;&#x0645;&#x0627;&#x0644;&#x0020;&#x062a;&#x063a;&#x06cc;&#x06cc;&#x0631;&#x0627;&#x062a;&#x0020;&#x0628;&#x0627;&#x06cc;&#x062f;&#x0020;&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;&#x0020;&#x0631;&#x0627;&#x0020;&#x0645;&#x062c;&#x062f;&#x062f;&#x0627;&#x0020;&#x0627;&#x0646;&#x062a;&#x062e;&#x0627;&#x0628;&#x0020;&#x06a9;&#x0646;&#x06cc;&#x062f;&#x0020;&#x0648;&#x0020;&#x06cc;&#x0627;&#x0020;&#x06af;&#x0648;&#x0634;&#x06cc;&#x0020;&#x062e;&#x0648;&#x062f;&#x0020;&#x0631;&#x0627;&#x0020;&#x0631;&#x06cc;&#x0020;&#x0627;&#x0633;&#x062a;&#x0627;&#x0631;&#x062a;&#x0020;&#x0646;&#x0645;&#x0627;&#x06cc;&#x06cc;&#x062f;</string>
	<string name="keymap_guide_text2">\t\t&#x0627;&#x06cc;&#x0646;&#x0020;&#x0642;&#x0633;&#x0645;&#x062a;&#x0020;&#x0628;&#x0647;&#x0020;&#x0634;&#x0645;&#x0627;&#x0020;&#x0627;&#x06cc;&#x0646;&#x0020;&#x0627;&#x0645;&#x06a9;&#x0627;&#x0646;&#x0020;&#x0631;&#x0627;&#x0020;&#x0645;&#x06cc;&#x0020;&#x062f;&#x0647;&#x062f;&#x0020;&#x06a9;&#x0647;&#x0020;&#x062d;&#x0631;&#x0648;&#x0641;&#x0020;&#x0645;&#x062e;&#x062a;&#x0644;&#x0641;&#x0020;&#x0631;&#x0627;&#x0020;&#x0628;&#x0647;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0647;&#x0627;&#x0020;&#x0646;&#x0633;&#x0628;&#x062a;&#x0020;&#x062f;&#x0647;&#x06cc;&#x062f;</string>
	<string name="keymap_guide_text3">\t\t&#x062f;&#x0631;&#x0020;&#x0628;&#x0631;&#x062e;&#x06cc;&#x0020;&#x0631;&#x0627;&#x0645;&#x0020;&#x0647;&#x0627;&#x06cc;&#x0020;&#x0627;&#x0646;&#x062f;&#x0631;&#x0648;&#x06cc;&#x062f;&#x0020;&#x06a9;&#x062f;&#x06cc;&#x0020;&#x06a9;&#x0647;&#x0020;&#x0628;&#x0647;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0020;&#x062a;&#x063a;&#x06cc;&#x06cc;&#x0631;&#x0020;&#x0632;&#x0628;&#x0627;&#x0646;&#x0020;&#x0646;&#x0633;&#x0628;&#x062a;&#x0020;&#x062f;&#x0627;&#x062f;&#x0647;&#x0020;&#x0634;&#x062f;&#x0647;&#x0020;&#x0645;&#x062a;&#x0641;&#x0627;&#x0648;&#x062a;&#x0020;&#x0627;&#x0633;&#x062a;&#x060c;&#x0020;&#x067e;&#x0633;&#x0020;&#x062f;&#x0631;&#x0020;&#x0635;&#x0648;&#x0631;&#x062a;&#x06cc;&#x0020;&#x06a9;&#x0647;&#x0020;&#x0642;&#x0627;&#x062f;&#x0631;&#x0020;&#x0628;&#x0647;&#x0020;&#x062a;&#x063a;&#x06cc;&#x06cc;&#x0631;&#x0020;&#x0632;&#x0628;&#x0627;&#x0646;&#x0020;&#x0646;&#x06cc;&#x0633;&#x062a;&#x06cc;&#x062f;&#x0020;&#x0645;&#x06cc;&#x062a;&#x0648;&#x0627;&#x0646;&#x06cc;&#x062f;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0020;&#x0646;&#x0633;&#x0628;&#x062a;&#x0020;&#x062f;&#x0627;&#x062f;&#x0647;&#x0020;&#x0634;&#x062f;&#x0647;&#x0020;&#x0628;&#x0631;&#x0627;&#x06cc;&#x0020;&#x062a;&#x063a;&#x06cc;&#x06cc;&#x0631;&#x0020;&#x0632;&#x0628;&#x0627;&#x0646;&#x0020;&#x0631;&#x0627;&#x0020;&#x0639;&#x0648;&#x0636;&#x0020;&#x06a9;&#x0646;&#x06cc;&#x062f;</string>
	<string name="keymap_guide_text4">\t\t&#x0627;&#x06cc;&#x0646;&#x0020;&#x0627;&#x067e;&#x0644;&#x06cc;&#x06a9;&#x06cc;&#x0634;&#x0646;&#x0020;&#x062f;&#x0631;&#x0020;&#x0627;&#x0635;&#x0644;&#x0020;&#x0628;&#x0631;&#x0627;&#x06cc;&#x0020;&#x06af;&#x0648;&#x0634;&#x06cc;&#x0020;&#x0627;&#x0686;&#x0020;&#x062a;&#x06cc;&#x0020;&#x0633;&#x06cc;&#x0020;&#x0686;&#x0627;&#x0686;&#x0627;&#x0020;&#x0637;&#x0631;&#x0627;&#x062d;&#x06cc;&#x0020;&#x0648;&#x0020;&#x0633;&#x0627;&#x062e;&#x062a;&#x0647;&#x0020;&#x0634;&#x062f;&#x0647;&#x0020;&#x0648;&#x0020;&#x062d;&#x0631;&#x0648;&#x0641;&#x0020;&#x0645;&#x0637;&#x0627;&#x0628;&#x0642;&#x0020;&#x0628;&#x0627;&#x0020;&#x0627;&#x06cc;&#x0646;&#x0020;&#x06af;&#x0648;&#x0634;&#x06cc;&#x0020;&#x0628;&#x0647;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0647;&#x0627;&#x0020;&#x0646;&#x0633;&#x0628;&#x062a;&#x0020;&#x062f;&#x0627;&#x062f;&#x0647;&#x0020;&#x0634;&#x062f;&#x0647;&#x0020;&#x0627;&#x0633;&#x062a;&#x002e;&#x0020;&#x0627;&#x0645;&#x0627;&#x0020;&#x0628;&#x0627;&#x0020;&#x0627;&#x0633;&#x062a;&#x0641;&#x0627;&#x062f;&#x0647;&#x0020;&#x0627;&#x0632;&#x0020;&#x0627;&#x0645;&#x06a9;&#x0627;&#x0646;&#x0020;&#x0646;&#x06af;&#x0627;&#x0634;&#x062a;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0647;&#x0627;&#x060c;&#x0020;&#x0627;&#x0641;&#x0631;&#x0627;&#x062f;&#x0020;&#x0628;&#x0627;&#x0020;&#x0633;&#x0627;&#x06cc;&#x0631;&#x0020;&#x06af;&#x0648;&#x0634;&#x06cc;&#x0647;&#x0627;&#x06cc;&#x0020;&#x062f;&#x0627;&#x0631;&#x0627;&#x06cc;&#x0020;&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;&#x0020;&#x0641;&#x06cc;&#x0632;&#x06cc;&#x06a9;&#x06cc;&#x0020;&#x0646;&#x06cc;&#x0632;&#x0020;&#x0645;&#x06cc;&#x062a;&#x0648;&#x0627;&#x0646;&#x0646;&#x062f;&#x0020;&#x0627;&#x0632;&#x0020;&#x0627;&#x06cc;&#x0646;&#x0020;&#x06a9;&#x06cc;&#x0628;&#x0648;&#x0631;&#x062f;&#x0020;&#x0627;&#x0633;&#x062a;&#x0641;&#x0627;&#x062f;&#x0647;&#x0020;&#x06a9;&#x0646;&#x0646;&#x062f;</string>
	<string name="keymap_guide_text5">\t\t&#x062a;&#x0648;&#x062c;&#x0647;&#x0020;&#x062f;&#x0627;&#x0634;&#x062a;&#x0647;&#x0020;&#x0628;&#x0627;&#x0634;&#x06cc;&#x062f;&#x0020;&#x06a9;&#x0647;&#x0020;&#x0639;&#x0645;&#x0644;&#x0020;&#x0646;&#x0633;&#x0628;&#x062a;&#x0020;&#x062f;&#x0627;&#x062f;&#x0646;&#x0020;&#x06a9;&#x0644;&#x06cc;&#x062f;&#x0647;&#x0627;&#x0020;&#x0628;&#x0647;&#x0020;&#x062d;&#x0631;&#x0648;&#x0641;&#x0020;&#x0645;&#x062a;&#x0641;&#x0627;&#x0648;&#x062a;&#x0020;&#x0627;&#x0632;&#x0020;&#x0644;&#x062d;&#x0627;&#x0638;&#x0020;&#x0628;&#x0631;&#x0646;&#x0627;&#x0645;&#x0647;&#x0020;&#x0646;&#x0648;&#x06cc;&#x0633;&#x06cc;&#x0020;&#x0639;&#x0645;&#x0644;&#x06cc;&#x0020;&#x067e;&#x06cc;&#x0686;&#x06cc;&#x062f;&#x0647;&#x0020;&#x0648;&#x0020;&#x0628;&#x0647;&#x0020;&#x0647;&#x0645;&#x0627;&#x0646;&#x0020;&#x0646;&#x0633;&#x0628;&#x062a;&#x0020;&#x0645;&#x0633;&#x062a;&#x0639;&#x062f;&#x0020;&#x062e;&#x0637;&#x0627;&#x0633;&#x062a;&#x002e;&#x0020;&#x067e;&#x0633;&#x0020;&#x062f;&#x0631;&#x0020;&#x0635;&#x0648;&#x0631;&#x062a;&#x06cc;&#x0020;&#x06a9;&#x0647;&#x0020;&#x0628;&#x062e;&#x0634;&#x06cc;&#x0020;&#x0627;&#x0632;&#x0020;&#x0627;&#x06cc;&#x0646;&#x0020;&#x0642;&#x0633;&#x0645;&#x062a;&#x0020;&#x0628;&#x0647;&#x0020;&#x062f;&#x0631;&#x0633;&#x062a;&#x06cc;&#x0020;&#x0639;&#x0645;&#x0644;&#x0020;&#x0646;&#x06a9;&#x0631;&#x062f;&#x060c;&#x0020;&#x0645;&#x0634;&#x06a9;&#x0644;&#x0020;&#x0631;&#x0627;&#x0020;&#x0628;&#x0647;&#x0020;&#x0635;&#x0648;&#x0631;&#x062a;&#x0020;&#x0645;&#x0641;&#x0635;&#x0644;&#x0020;&#x0628;&#x0631;&#x0627;&#x06cc;&#x0020;&#x0628;&#x0646;&#x062f;&#x0647;&#x0020;&#x0627;&#x06cc;&#x0645;&#x06cc;&#x0644;&#x0020;&#x06a9;&#x0646;&#x06cc;&#x062f;&#x0020;&#x062a;&#x0627;&#x0020;&#x0647;&#x0631;&#x0686;&#x0647;&#x0020;&#x0633;&#x0631;&#x06cc;&#x0639;&#x062a;&#x0631;&#x0020;&#x0645;&#x0634;&#x06a9;&#x0644;&#x0020;&#x0628;&#x0631;&#x0637;&#x0631;&#x0641;&#x0020;&#x0634;&#x0648;&#x062f;</string>
</resources>