<?xml version="1.0" encoding="utf-8"?>

<!-- 
 * Programmer: Mehdi Sohrabi
 * Email: mehdok@gmail.com
 * Hub Channel: https://github.com/mehdok
 -->
 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <com.mehdok.chachapersiankeyboardpro.MehdokTextView 
        android:id="@+id/text1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/change_key_dialog_text1"
        android:textDirection="rtl"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"/>
    
    <com.mehdok.chachapersiankeyboardpro.MehdokTextView  
        android:id="@+id/keyToChange"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="A"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textSize="30sp"
        android:textColor="@color/red"/>
    
    <com.mehdok.chachapersiankeyboardpro.MehdokTextView  
        android:id="@+id/text2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/change_key_dialog_text2"
        android:textDirection="rtl"
		android:layout_below="@id/keyToChange"
		android:layout_centerHorizontal="true"
        android:textSize="25sp"/>
    
    <com.mehdok.chachapersiankeyboardpro.MehdokTextView  
        android:id="@+id/text3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/change_key_dialog_currKey"
        android:textDirection="rtl"
		android:layout_below="@id/text2"
		android:layout_centerHorizontal="true"
		android:textSize="25sp"
		android:layout_marginTop="10dip"/>
    
    <com.mehdok.chachapersiankeyboardpro.MehdokTextView  
        android:id="@+id/currKey"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="KEYCODE_A"
        android:layout_below="@id/text3"
        android:layout_centerHorizontal="true"
		android:textSize="30sp"
		android:textColor="@color/green"/>
    

</RelativeLayout>